parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> INSTRUCTIONS
Rule 2     INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION
Rule 3     INSTRUCTIONS -> INSTRUCTION
Rule 4     INSTRUCTION -> STATEMENT ;
Rule 5     INSTRUCTION -> BLOCK_STATEMENT
Rule 6     INSTRUCTION -> IF_STATEMENT
Rule 7     INSTRUCTION -> WHILE_STATEMENT
Rule 8     INSTRUCTION -> FOR_STATEMENT
Rule 9     STATEMENT -> ASSIGNMENT
Rule 10    STATEMENT -> KEYWORD
Rule 11    ASSIGNMENT -> LEFT_ASSIGNMENT = EXPRESSION
Rule 12    ASSIGNMENT -> LEFT_ASSIGNMENT PLUS_ASSIGN EXPRESSION
Rule 13    ASSIGNMENT -> LEFT_ASSIGNMENT MINUS_ASSIGN EXPRESSION
Rule 14    ASSIGNMENT -> LEFT_ASSIGNMENT MUL_ASSIGN EXPRESSION
Rule 15    ASSIGNMENT -> LEFT_ASSIGNMENT DIV_ASSIGN EXPRESSION
Rule 16    LEFT_ASSIGNMENT -> CONST_ID
Rule 17    LEFT_ASSIGNMENT -> ACCESS
Rule 18    ACCESS -> CONST_ID [ SEQUENCE ]
Rule 19    SEQUENCE -> SEQUENCE , EXPRESSION
Rule 20    SEQUENCE -> EXPRESSION
Rule 21    VALUE -> CONST_VALUE
Rule 22    VALUE -> MATRIX
Rule 23    VALUE -> ACCESS
Rule 24    VALUE -> CONST_ID
Rule 25    CONST_VALUE -> FLOAT
Rule 26    CONST_VALUE -> INT
Rule 27    CONST_VALUE -> STRING
Rule 28    CONST_ID -> ID
Rule 29    MATRIX -> [ ROWS ]
Rule 30    ROWS -> ROWS ; SEQUENCE
Rule 31    ROWS -> SEQUENCE
Rule 32    EXPRESSION -> EXPRESSION DOT_PLUS EXPRESSION
Rule 33    EXPRESSION -> EXPRESSION DOT_MINUS EXPRESSION
Rule 34    EXPRESSION -> EXPRESSION DOT_MUL EXPRESSION
Rule 35    EXPRESSION -> EXPRESSION DOT_DIV EXPRESSION
Rule 36    EXPRESSION -> EXPRESSION + EXPRESSION
Rule 37    EXPRESSION -> EXPRESSION - EXPRESSION
Rule 38    EXPRESSION -> EXPRESSION * EXPRESSION
Rule 39    EXPRESSION -> EXPRESSION / EXPRESSION
Rule 40    EXPRESSION -> EYE ( EXPRESSION )
Rule 41    EXPRESSION -> ZEROS ( EXPRESSION )
Rule 42    EXPRESSION -> ONES ( EXPRESSION )
Rule 43    EXPRESSION -> EXPRESSION '
Rule 44    EXPRESSION -> VALUE
Rule 45    EXPRESSION -> ( EXPRESSION )
Rule 46    EXPRESSION -> - EXPRESSION
Rule 47    KEYWORD -> PRINT SEQUENCE
Rule 48    KEYWORD -> BREAK
Rule 49    KEYWORD -> CONTINUE
Rule 50    KEYWORD -> RETURN EXPRESSION
Rule 51    CONDITION -> EXPRESSION < EXPRESSION
Rule 52    CONDITION -> EXPRESSION > EXPRESSION
Rule 53    CONDITION -> EXPRESSION EQ EXPRESSION
Rule 54    CONDITION -> EXPRESSION NEQ EXPRESSION
Rule 55    CONDITION -> EXPRESSION GEQ EXPRESSION
Rule 56    CONDITION -> EXPRESSION LEQ EXPRESSION
Rule 57    BLOCK_STATEMENT -> { INSTRUCTIONS }
Rule 58    IF_STATEMENT -> IF ( CONDITION ) INSTRUCTION
Rule 59    IF_STATEMENT -> IF ( CONDITION ) INSTRUCTION ELSE INSTRUCTION
Rule 60    WHILE_STATEMENT -> WHILE ( CONDITION ) INSTRUCTION
Rule 61    FOR_STATEMENT -> FOR CONST_ID = RANGE INSTRUCTION
Rule 62    RANGE -> EXPRESSION : EXPRESSION
Rule 63    RANGE -> EXPRESSION : EXPRESSION : EXPRESSION

Terminals, with rules where they appear

'                    : 43
(                    : 40 41 42 45 58 59 60
)                    : 40 41 42 45 58 59 60
*                    : 38
+                    : 36
,                    : 19
-                    : 37 46
/                    : 39
:                    : 62 63 63
;                    : 4 30
<                    : 51
=                    : 11 61
>                    : 52
BREAK                : 48
CONTINUE             : 49
DIV_ASSIGN           : 15
DOT_DIV              : 35
DOT_MINUS            : 33
DOT_MUL              : 34
DOT_PLUS             : 32
ELSE                 : 59
EQ                   : 53
EYE                  : 40
FLOAT                : 25
FOR                  : 61
GEQ                  : 55
ID                   : 28
IF                   : 58 59
INT                  : 26
LEQ                  : 56
MINUS_ASSIGN         : 13
MUL_ASSIGN           : 14
NEQ                  : 54
ONES                 : 42
PLUS_ASSIGN          : 12
PRINT                : 47
RETURN               : 50
STRING               : 27
WHILE                : 60
ZEROS                : 41
[                    : 18 29
]                    : 18 29
error                : 
{                    : 57
}                    : 57

Nonterminals, with rules where they appear

ACCESS               : 17 23
ASSIGNMENT           : 9
BLOCK_STATEMENT      : 5
CONDITION            : 58 59 60
CONST_ID             : 16 18 24 61
CONST_VALUE          : 21
EXPRESSION           : 11 12 13 14 15 19 20 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 42 43 45 46 50 51 51 52 52 53 53 54 54 55 55 56 56 62 62 63 63 63
FOR_STATEMENT        : 8
IF_STATEMENT         : 6
INSTRUCTION          : 2 3 58 59 59 60 61
INSTRUCTIONS         : 1 2 57
KEYWORD              : 10
LEFT_ASSIGNMENT      : 11 12 13 14 15
MATRIX               : 22
RANGE                : 61
ROWS                 : 29 30
SEQUENCE             : 18 19 30 31 47
STATEMENT            : 4
VALUE                : 44
WHILE_STATEMENT      : 7
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . INSTRUCTIONS
    (2) INSTRUCTIONS -> . INSTRUCTIONS INSTRUCTION
    (3) INSTRUCTIONS -> . INSTRUCTION
    (4) INSTRUCTION -> . STATEMENT ;
    (5) INSTRUCTION -> . BLOCK_STATEMENT
    (6) INSTRUCTION -> . IF_STATEMENT
    (7) INSTRUCTION -> . WHILE_STATEMENT
    (8) INSTRUCTION -> . FOR_STATEMENT
    (9) STATEMENT -> . ASSIGNMENT
    (10) STATEMENT -> . KEYWORD
    (57) BLOCK_STATEMENT -> . { INSTRUCTIONS }
    (58) IF_STATEMENT -> . IF ( CONDITION ) INSTRUCTION
    (59) IF_STATEMENT -> . IF ( CONDITION ) INSTRUCTION ELSE INSTRUCTION
    (60) WHILE_STATEMENT -> . WHILE ( CONDITION ) INSTRUCTION
    (61) FOR_STATEMENT -> . FOR CONST_ID = RANGE INSTRUCTION
    (11) ASSIGNMENT -> . LEFT_ASSIGNMENT = EXPRESSION
    (12) ASSIGNMENT -> . LEFT_ASSIGNMENT PLUS_ASSIGN EXPRESSION
    (13) ASSIGNMENT -> . LEFT_ASSIGNMENT MINUS_ASSIGN EXPRESSION
    (14) ASSIGNMENT -> . LEFT_ASSIGNMENT MUL_ASSIGN EXPRESSION
    (15) ASSIGNMENT -> . LEFT_ASSIGNMENT DIV_ASSIGN EXPRESSION
    (47) KEYWORD -> . PRINT SEQUENCE
    (48) KEYWORD -> . BREAK
    (49) KEYWORD -> . CONTINUE
    (50) KEYWORD -> . RETURN EXPRESSION
    (16) LEFT_ASSIGNMENT -> . CONST_ID
    (17) LEFT_ASSIGNMENT -> . ACCESS
    (28) CONST_ID -> . ID
    (18) ACCESS -> . CONST_ID [ SEQUENCE ]

    {               shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    RETURN          shift and go to state 20
    ID              shift and go to state 22

    start                          shift and go to state 1
    INSTRUCTIONS                   shift and go to state 2
    INSTRUCTION                    shift and go to state 3
    STATEMENT                      shift and go to state 4
    BLOCK_STATEMENT                shift and go to state 5
    IF_STATEMENT                   shift and go to state 6
    WHILE_STATEMENT                shift and go to state 7
    FOR_STATEMENT                  shift and go to state 8
    ASSIGNMENT                     shift and go to state 9
    KEYWORD                        shift and go to state 10
    CONST_ID                       shift and go to state 15
    LEFT_ASSIGNMENT                shift and go to state 16
    ACCESS                         shift and go to state 21

state 1

    (0) S' -> start .



state 2

    (1) start -> INSTRUCTIONS .
    (2) INSTRUCTIONS -> INSTRUCTIONS . INSTRUCTION
    (4) INSTRUCTION -> . STATEMENT ;
    (5) INSTRUCTION -> . BLOCK_STATEMENT
    (6) INSTRUCTION -> . IF_STATEMENT
    (7) INSTRUCTION -> . WHILE_STATEMENT
    (8) INSTRUCTION -> . FOR_STATEMENT
    (9) STATEMENT -> . ASSIGNMENT
    (10) STATEMENT -> . KEYWORD
    (57) BLOCK_STATEMENT -> . { INSTRUCTIONS }
    (58) IF_STATEMENT -> . IF ( CONDITION ) INSTRUCTION
    (59) IF_STATEMENT -> . IF ( CONDITION ) INSTRUCTION ELSE INSTRUCTION
    (60) WHILE_STATEMENT -> . WHILE ( CONDITION ) INSTRUCTION
    (61) FOR_STATEMENT -> . FOR CONST_ID = RANGE INSTRUCTION
    (11) ASSIGNMENT -> . LEFT_ASSIGNMENT = EXPRESSION
    (12) ASSIGNMENT -> . LEFT_ASSIGNMENT PLUS_ASSIGN EXPRESSION
    (13) ASSIGNMENT -> . LEFT_ASSIGNMENT MINUS_ASSIGN EXPRESSION
    (14) ASSIGNMENT -> . LEFT_ASSIGNMENT MUL_ASSIGN EXPRESSION
    (15) ASSIGNMENT -> . LEFT_ASSIGNMENT DIV_ASSIGN EXPRESSION
    (47) KEYWORD -> . PRINT SEQUENCE
    (48) KEYWORD -> . BREAK
    (49) KEYWORD -> . CONTINUE
    (50) KEYWORD -> . RETURN EXPRESSION
    (16) LEFT_ASSIGNMENT -> . CONST_ID
    (17) LEFT_ASSIGNMENT -> . ACCESS
    (28) CONST_ID -> . ID
    (18) ACCESS -> . CONST_ID [ SEQUENCE ]

    $end            reduce using rule 1 (start -> INSTRUCTIONS .)
    {               shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    RETURN          shift and go to state 20
    ID              shift and go to state 22

    INSTRUCTION                    shift and go to state 23
    STATEMENT                      shift and go to state 4
    BLOCK_STATEMENT                shift and go to state 5
    IF_STATEMENT                   shift and go to state 6
    WHILE_STATEMENT                shift and go to state 7
    FOR_STATEMENT                  shift and go to state 8
    ASSIGNMENT                     shift and go to state 9
    KEYWORD                        shift and go to state 10
    CONST_ID                       shift and go to state 15
    LEFT_ASSIGNMENT                shift and go to state 16
    ACCESS                         shift and go to state 21

state 3

    (3) INSTRUCTIONS -> INSTRUCTION .

    {               reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    IF              reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    WHILE           reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    FOR             reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    PRINT           reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    BREAK           reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    CONTINUE        reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    RETURN          reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    ID              reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    $end            reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    }               reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)


state 4

    (4) INSTRUCTION -> STATEMENT . ;

    ;               shift and go to state 24


state 5

    (5) INSTRUCTION -> BLOCK_STATEMENT .

    {               reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    IF              reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    WHILE           reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    FOR             reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    PRINT           reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    BREAK           reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    CONTINUE        reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    RETURN          reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    ID              reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    $end            reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    }               reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)
    ELSE            reduce using rule 5 (INSTRUCTION -> BLOCK_STATEMENT .)


state 6

    (6) INSTRUCTION -> IF_STATEMENT .

    {               reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    IF              reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    WHILE           reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    FOR             reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    PRINT           reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    BREAK           reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    CONTINUE        reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    RETURN          reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    ID              reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    $end            reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    }               reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)
    ELSE            reduce using rule 6 (INSTRUCTION -> IF_STATEMENT .)


state 7

    (7) INSTRUCTION -> WHILE_STATEMENT .

    {               reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    IF              reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    WHILE           reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    FOR             reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    PRINT           reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    BREAK           reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    CONTINUE        reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    RETURN          reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    ID              reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    $end            reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    }               reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)
    ELSE            reduce using rule 7 (INSTRUCTION -> WHILE_STATEMENT .)


state 8

    (8) INSTRUCTION -> FOR_STATEMENT .

    {               reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    IF              reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    WHILE           reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    FOR             reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    PRINT           reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    BREAK           reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    CONTINUE        reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    RETURN          reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    ID              reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    $end            reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    }               reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)
    ELSE            reduce using rule 8 (INSTRUCTION -> FOR_STATEMENT .)


state 9

    (9) STATEMENT -> ASSIGNMENT .

    ;               reduce using rule 9 (STATEMENT -> ASSIGNMENT .)


state 10

    (10) STATEMENT -> KEYWORD .

    ;               reduce using rule 10 (STATEMENT -> KEYWORD .)


state 11

    (57) BLOCK_STATEMENT -> { . INSTRUCTIONS }
    (2) INSTRUCTIONS -> . INSTRUCTIONS INSTRUCTION
    (3) INSTRUCTIONS -> . INSTRUCTION
    (4) INSTRUCTION -> . STATEMENT ;
    (5) INSTRUCTION -> . BLOCK_STATEMENT
    (6) INSTRUCTION -> . IF_STATEMENT
    (7) INSTRUCTION -> . WHILE_STATEMENT
    (8) INSTRUCTION -> . FOR_STATEMENT
    (9) STATEMENT -> . ASSIGNMENT
    (10) STATEMENT -> . KEYWORD
    (57) BLOCK_STATEMENT -> . { INSTRUCTIONS }
    (58) IF_STATEMENT -> . IF ( CONDITION ) INSTRUCTION
    (59) IF_STATEMENT -> . IF ( CONDITION ) INSTRUCTION ELSE INSTRUCTION
    (60) WHILE_STATEMENT -> . WHILE ( CONDITION ) INSTRUCTION
    (61) FOR_STATEMENT -> . FOR CONST_ID = RANGE INSTRUCTION
    (11) ASSIGNMENT -> . LEFT_ASSIGNMENT = EXPRESSION
    (12) ASSIGNMENT -> . LEFT_ASSIGNMENT PLUS_ASSIGN EXPRESSION
    (13) ASSIGNMENT -> . LEFT_ASSIGNMENT MINUS_ASSIGN EXPRESSION
    (14) ASSIGNMENT -> . LEFT_ASSIGNMENT MUL_ASSIGN EXPRESSION
    (15) ASSIGNMENT -> . LEFT_ASSIGNMENT DIV_ASSIGN EXPRESSION
    (47) KEYWORD -> . PRINT SEQUENCE
    (48) KEYWORD -> . BREAK
    (49) KEYWORD -> . CONTINUE
    (50) KEYWORD -> . RETURN EXPRESSION
    (16) LEFT_ASSIGNMENT -> . CONST_ID
    (17) LEFT_ASSIGNMENT -> . ACCESS
    (28) CONST_ID -> . ID
    (18) ACCESS -> . CONST_ID [ SEQUENCE ]

    {               shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    RETURN          shift and go to state 20
    ID              shift and go to state 22

    INSTRUCTIONS                   shift and go to state 25
    INSTRUCTION                    shift and go to state 3
    STATEMENT                      shift and go to state 4
    BLOCK_STATEMENT                shift and go to state 5
    IF_STATEMENT                   shift and go to state 6
    WHILE_STATEMENT                shift and go to state 7
    FOR_STATEMENT                  shift and go to state 8
    ASSIGNMENT                     shift and go to state 9
    KEYWORD                        shift and go to state 10
    CONST_ID                       shift and go to state 15
    LEFT_ASSIGNMENT                shift and go to state 16
    ACCESS                         shift and go to state 21

state 12

    (58) IF_STATEMENT -> IF . ( CONDITION ) INSTRUCTION
    (59) IF_STATEMENT -> IF . ( CONDITION ) INSTRUCTION ELSE INSTRUCTION

    (               shift and go to state 26


state 13

    (60) WHILE_STATEMENT -> WHILE . ( CONDITION ) INSTRUCTION

    (               shift and go to state 27


state 14

    (61) FOR_STATEMENT -> FOR . CONST_ID = RANGE INSTRUCTION
    (28) CONST_ID -> . ID

    ID              shift and go to state 22

    CONST_ID                       shift and go to state 28

state 15

    (16) LEFT_ASSIGNMENT -> CONST_ID .
    (18) ACCESS -> CONST_ID . [ SEQUENCE ]

    =               reduce using rule 16 (LEFT_ASSIGNMENT -> CONST_ID .)
    PLUS_ASSIGN     reduce using rule 16 (LEFT_ASSIGNMENT -> CONST_ID .)
    MINUS_ASSIGN    reduce using rule 16 (LEFT_ASSIGNMENT -> CONST_ID .)
    MUL_ASSIGN      reduce using rule 16 (LEFT_ASSIGNMENT -> CONST_ID .)
    DIV_ASSIGN      reduce using rule 16 (LEFT_ASSIGNMENT -> CONST_ID .)
    [               shift and go to state 29


state 16

    (11) ASSIGNMENT -> LEFT_ASSIGNMENT . = EXPRESSION
    (12) ASSIGNMENT -> LEFT_ASSIGNMENT . PLUS_ASSIGN EXPRESSION
    (13) ASSIGNMENT -> LEFT_ASSIGNMENT . MINUS_ASSIGN EXPRESSION
    (14) ASSIGNMENT -> LEFT_ASSIGNMENT . MUL_ASSIGN EXPRESSION
    (15) ASSIGNMENT -> LEFT_ASSIGNMENT . DIV_ASSIGN EXPRESSION

    =               shift and go to state 30
    PLUS_ASSIGN     shift and go to state 31
    MINUS_ASSIGN    shift and go to state 32
    MUL_ASSIGN      shift and go to state 33
    DIV_ASSIGN      shift and go to state 34


state 17

    (47) KEYWORD -> PRINT . SEQUENCE
    (19) SEQUENCE -> . SEQUENCE , EXPRESSION
    (20) SEQUENCE -> . EXPRESSION
    (32) EXPRESSION -> . EXPRESSION DOT_PLUS EXPRESSION
    (33) EXPRESSION -> . EXPRESSION DOT_MINUS EXPRESSION
    (34) EXPRESSION -> . EXPRESSION DOT_MUL EXPRESSION
    (35) EXPRESSION -> . EXPRESSION DOT_DIV EXPRESSION
    (36) EXPRESSION -> . EXPRESSION + EXPRESSION
    (37) EXPRESSION -> . EXPRESSION - EXPRESSION
    (38) EXPRESSION -> . EXPRESSION * EXPRESSION
    (39) EXPRESSION -> . EXPRESSION / EXPRESSION
    (40) EXPRESSION -> . EYE ( EXPRESSION )
    (41) EXPRESSION -> . ZEROS ( EXPRESSION )
    (42) EXPRESSION -> . ONES ( EXPRESSION )
    (43) EXPRESSION -> . EXPRESSION '
    (44) EXPRESSION -> . VALUE
    (45) EXPRESSION -> . ( EXPRESSION )
    (46) EXPRESSION -> . - EXPRESSION
    (21) VALUE -> . CONST_VALUE
    (22) VALUE -> . MATRIX
    (23) VALUE -> . ACCESS
    (24) VALUE -> . CONST_ID
    (25) CONST_VALUE -> . FLOAT
    (26) CONST_VALUE -> . INT
    (27) CONST_VALUE -> . STRING
    (29) MATRIX -> . [ ROWS ]
    (18) ACCESS -> . CONST_ID [ SEQUENCE ]
    (28) CONST_ID -> . ID

    EYE             shift and go to state 38
    ZEROS           shift and go to state 40
    ONES            shift and go to state 41
    (               shift and go to state 39
    -               shift and go to state 37
    FLOAT           shift and go to state 47
    INT             shift and go to state 48
    STRING          shift and go to state 49
    [               shift and go to state 50
    ID              shift and go to state 22
